--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-
-  {% include "head_part.html" %}
-
-</head>
-
-<body class="bg-gradient-primary">
+{% block content %}
+<body class="bg-gradient-light">
 
     <div class="container">
 
@@ -21,7 +15,8 @@
                             <div class="text-center">
                                 <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
                             </div>
-                            <form class="user">
+                            <form class="user" method="POST">
+                                {% csrf_token %}
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
                                         <input type="text" class="form-control form-control-user" id="exampleFirstName"
@@ -46,7 +41,7 @@
                                             id="exampleRepeatPassword" placeholder="Repeat Password">
                                     </div>
                                 </div>
-                                <a href="login.html" class="btn btn-primary btn-user btn-block">
+                                <a href="" type="submit" class="btn btn-primary btn-user btn-block">
                                     Register Account
                                 </a>
                                 <hr>
@@ -84,4 +79,4 @@
 
 </body>
 
-</html>
+{% endblock %}
