--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -5,22 +5,22 @@
       <span>Almau Contacts</span>
       </div>
           <div class="justify-content-around mr-md-5">
-              <a href="" class="me-4 link-secondary mr-md-5">
+              <a href="" class="me-4 link-secondary mr-md-5 text-decoration-none btn-outline-info">
                 <i class="fab fa-facebook-f"></i>
               </a>
-              <a href="" class="me-4 link-secondary mr-md-5">
+              <a href="" class="me-4 link-secondary mr-md-5 text-decoration-none btn-outline-info">
                 <i class="fab fa-twitter"></i>
               </a>
-              <a href="" class="me-4 link-secondary mr-md-5">
+              <a href="" class="me-4 link-secondary mr-md-5 text-decoration-none btn-outline-info">
                 <i class="fab fa-google"></i>
               </a>
-              <a href="" class="me-4 link-secondary mr-md-5">
+              <a href="" class="me-4 link-secondary mr-md-5 text-decoration-none btn-outline-info">
                 <i class="fab fa-instagram"></i>
               </a>
-              <a href="" class="me-4 link-secondary mr-md-5">
+              <a href="" class="me-4 link-secondary mr-md-5 text-decoration-none btn-outline-info">
                 <i class="fab fa-linkedin"></i>
               </a>
-              <a href="" class="me-4 link-secondary mr-md-5">
+              <a href="" class="me-4 link-secondary mr-md-5 text-decoration-none btn-outline-info">
                 <i class="fab fa-github"></i>
               </a>
     </div>
