--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <!-- Background image -->
-<div class="bg-image d-flex justify-content-center align-items-center mt-1"
-  style="background-image: url('https://www.almau.edu.kz/images/uploads/193030cd57f9e147abd3abde61ece97f.png'); height: 50vh;">
+<div class="bg-image d-flex justify-content-center align-items-center mt-3"
+  style="background-image: url('https://conferences.euram.academy/2023conference/wp-content/uploads/sites/8/2022/03/06092-TCD-TBS-EURAM-Proof05-1100x264-Banner.jpg'); height: 55vh;">
 </div>
 <!-- Background image -->
 
@@ -11,7 +11,7 @@
 <div class="mt-5">
     <div class="row justify-content-center">
         <div class="col-4 offset-md-1">
-            <h3 class="text-dark">Вестник ToU</h3>
+            <h3 class="text-dark">AlmaU 2023</h3>
             <p class="fst-italic">Инструкция для подачи статьи</p>
         </div>
         <div class="col-6">
