--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -10,13 +11,20 @@
         rel="stylesheet">
     <!-- Custom styles for this template-->
     <link href="/static/css/sb-admin-2.min.css" rel="stylesheet">
-    <link href="/static/css/customcss.css" rel="stylesheet">
+    <link href="{% static 'css/customcss.css' %}" rel="stylesheet">
+    {% block css %}
+    {% endblock %}
 </head>
 <body>
-{% include "head.html" %}
+<div style="height: 75px">
+    {% include "head.html" %}
+
+</div>
 {% block content %}
 {% endblock %}
 {% include "footer.html" %}
+<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+      <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
