--- a/app/templates/head.html
+++ b/app/templates/head.html
@@ -1,27 +1,88 @@
-<div class="navbar navbar-fixed-top mt-2">
-    <div class="row">
-        <div class="col-6 offset-md-2">
-            <img class="img col-3" src="https://www.almau.edu.kz/images/uploads/1d122219a21ec914f0c77a0fb9b8946f.png">
+<div class="fixed-top navbar-light bg-white"> <nav class="navbar navbar-expand-lg navbar-light bg-light text-dark">
+    <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <a class="navbar-brand mt-lg-0" href="#">
+            </a>
         </div>
-        <div class="col row nav-justified">
-            <div class="col-6">
-                <img class="img col-1" src="https://cdn-icons-png.flaticon.com/512/1250/1250689.png">
-                {% if user.is_authenticated %}<a href="/logout.html">Logout</a>
-                    {% else %}
-                    <a href="/login.html">Login</a>
-                    <a class="col-md-2" href="/register">Register</a>
+        <div class="d-flex align-items-center">
+            <div class="dropdown">
+                {% if user.is_authenticated %}
+                    <a class="text-decoration-none text-dark" href="/logout.html">Logout</a>
+                {% else %}
+                    <a href="/login.html" class="text-decoration-none text-dark">Login</a>
+                    <a class="text-decoration-none text-dark ml-md-4" href="/register">Register</a>
                 {% endif %}
             </div>
-            <div class="col-2">Language</div>
         </div>
     </div>
-</div>
-<hr align="center" width="100%" size="2" />
-<div class="container">
-    <nav class="nav nav-pills nav-fill">
-      <a class="nav-link disabled" aria-current="page" href="#">Главная</a>
-      <a class="nav-link disabled" href="#">Вестник</a>
-      <a class="nav-link disabled" href="#">Авторам</a>
-      <a class="nav-link disabled">Редколлегия</a><a class="nav-link disabled">Контакты</a>
+</nav>
+<nav class="navbar navbar-expand-lg">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+<div class="collapse navbar-collapse justify-content-around" id="navbarNav">
+    <nav class="nav nav-pills nav-fill navbar-nav">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">HOME</a>
+          <ul class="dropdown-menu">
+              <li><a class="dropdown-item text-dark" href="#">Action</a></li>
+              <li><a class="dropdown-item text-dark" href="#">Another action</a></li>
+              <li><a class="dropdown-item text-dark" href="#">Something else here</a></li>
+              <li><hr class="dropdown-divider text-dark"></li>
+              <li><a class="dropdown-item text-dark" href="#">Separated link</a></li>
+          </ul>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">ABOUT</a>
+          <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Separated link</a></li>
+          </ul>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">PUBLICATIONS</a>
+          <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Separated link</a></li>
+          </ul>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">ORGANIZERS</a>
+          <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Separated link</a></li>
+          </ul>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">KEYNOTES</a>
+          <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Separated link</a></li>
+          </ul>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">REGISTRATION & VISA</a>
+          <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Separated link</a></li>
+          </ul>
+      </li>
     </nav>
+</div>
+</nav>
 </div>
