--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -1,4 +1,4 @@
-<footer class="text-center text-lg-start bg-white text-muted">
+<footer class="text-center text-lg-start bg-gray-100 text-muted mt-5">
 
       <section class="d-flex justify-content-around justify-content-center p-5 border-bottom ">
       <div class="me-5 d-none d-lg-block">
