--- a/app/templates/head.html
+++ b/app/templates/head.html
@@ -20,7 +20,7 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-<div class="collapse navbar-collapse justify-content-around" id="navbarNav">
+<div class="collapse navbar-collapse justify-content-lg-center" id="navbarNav">
     <nav class="nav nav-pills nav-fill navbar-nav">
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">HOME</a>
