--- a/app/templates/head.html
+++ b/app/templates/head.html
@@ -32,16 +32,16 @@
               <li><a class="dropdown-item text-dark" href="#">Separated link</a></li>
           </ul>
       </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">ABOUT</a>
-          <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Separated link</a></li>
-          </ul>
-      </li>
+{#      <li class="nav-item dropdown">#}
+        <a style="scroll-behavior: smooth;" class="nav-link text-dark" href="#" role="button" aria-expanded="false">ABOUT</a>
+{#          <ul class="dropdown-menu">#}
+{#              <li><a class="dropdown-item" href="#">Action</a></li>#}
+{#              <li><a class="dropdown-item" href="#">Another action</a></li>#}
+{#              <li><a class="dropdown-item" href="#">Something else here</a></li>#}
+{#              <li><hr class="dropdown-divider"></li>#}
+{#              <li><a class="dropdown-item" href="#">Separated link</a></li>#}
+{#          </ul>#}
+{#      </li>#}
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">PUBLICATIONS</a>
           <ul class="dropdown-menu">
