--- a/app/templates/speakers.html
+++ b/app/templates/speakers.html
@@ -9,7 +9,7 @@
                 <div class="text-dark text-center mr-4 p-4 m-3">
                     <h4 class=" text-primary">{{ speaker.name }}</h4>
                     <p class="font-weight-bold">{{ speaker.employee }}</p>
-
+asdsda
                     {{ speaker.description }}
                 </div>
             </div>
