--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -8,12 +8,12 @@
         <div class="card o-hidden border-0 shadow-lg my-5">
             <div class="card-body p-0">
                 <!-- Nested Row within Card Body -->
-                <div class="row">
-                    <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
+                <div class="row justify-content-center">
+{#                    <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>#}
                     <div class="col-lg-7">
                         <div class="p-5">
                             <div class="text-center">
-                                <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
+                                <h1 class="h4 text-gray-900 mb-6">Create an Account!</h1>
                             </div>
                             <form class="user" method="POST" action="{% url 'register' %}">
                                 {% csrf_token %}
@@ -42,8 +42,6 @@
                                     </div>
                                 </div>
                                 <input value="register" type="submit" class="btn btn-primary btn-user btn-block">
-                                    Register Account
-                                </input>
                                 <hr>
                                 <a href="index.html" class="btn btn-google btn-user btn-block">
                                     <i class="fab fa-google fa-fw"></i> Register with Google
