--- a/app/templates/head.html
+++ b/app/templates/head.html
@@ -22,18 +22,18 @@
   </button>
 <div class="collapse navbar-collapse justify-content-lg-center" id="navbarNav">
     <nav class="nav nav-pills nav-fill navbar-nav">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">HOME</a>
-          <ul class="dropdown-menu">
-              <li><a class="dropdown-item text-dark" href="#">Action</a></li>
-              <li><a class="dropdown-item text-dark" href="#">Another action</a></li>
-              <li><a class="dropdown-item text-dark" href="#">Something else here</a></li>
-              <li><hr class="dropdown-divider text-dark"></li>
-              <li><a class="dropdown-item text-dark" href="#">Separated link</a></li>
-          </ul>
-      </li>
 {#      <li class="nav-item dropdown">#}
-        <a style="scroll-behavior: smooth;" class="nav-link text-dark" href="#" role="button" aria-expanded="false">ABOUT</a>
+{#        <a class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">HOME</a>#}
+{#          <ul class="dropdown-menu">#}
+{#              <li><a class="dropdown-item text-dark" href="#">Action</a></li>#}
+{#              <li><a class="dropdown-item text-dark" href="#">Another action</a></li>#}
+{#              <li><a class="dropdown-item text-dark" href="#">Something else here</a></li>#}
+{#              <li><hr class="dropdown-divider text-dark"></li>#}
+{#              <li><a class="dropdown-item text-dark" href="#">Separated link</a></li>#}
+{#          </ul>#}
+{#      </li>#}
+{#      <li class="nav-item dropdown">#}
+        <a style="scroll-behavior: smooth;" class="nav-link text-dark" href="{% url 'home' %}" role="button" aria-expanded="false">ABOUT</a>
 {#          <ul class="dropdown-menu">#}
 {#              <li><a class="dropdown-item" href="#">Action</a></li>#}
 {#              <li><a class="dropdown-item" href="#">Another action</a></li>#}
@@ -42,25 +42,10 @@
 {#              <li><a class="dropdown-item" href="#">Separated link</a></li>#}
 {#          </ul>#}
 {#      </li>#}
+        <a class="nav-link text-dark" href="{% url 'publications' %}" role="button" aria-expanded="false">PUBLICATIONS</a>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">PUBLICATIONS</a>
-          <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Separated link</a></li>
-          </ul>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">ORGANIZERS</a>
-          <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Separated link</a></li>
-          </ul>
+        <a class="nav-link text-dark" href="{% url 'organizers' %}" role="button" aria-expanded="false">ORGANIZERS</a>
+
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">KEYNOTES</a>
@@ -73,14 +58,8 @@
           </ul>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">REGISTRATION & VISA</a>
-          <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Separated link</a></li>
-          </ul>
+        <a class="nav-link text-dark" href="{% url 'registration_visa' %}" role="button" aria-expanded="false">REGISTRATION & VISA</a>
+
       </li>
     </nav>
 </div>
