--- a/app/templates/organizers.html
+++ b/app/templates/organizers.html
@@ -8,73 +8,25 @@
     <hr width="90px" align="left" style=" border: 1px solid blue;" />
     <h4 class="fst-italic mb-3 mt-4 text-primary">Organizing Committee</h4>
     <div class="row mt-5">
+                {% for speaker in speakers %}
+
         <div class="col-sm-4 mb-5">
             <div class="card">
                 <div class="text-center mt-3">
-                    <img src="https://socinfo2018.hse.ru/public/people/Ingmar_Weber.jpg" alt="" width="110px" class="rounded-circle">
-                </div>
+{% if speaker.photo %}
+            <img src="{{ speaker.photo.url }}" alt="" width="110px" class="rounded-circle">
+            {% else%}
+                        <img src="https://images.philips.com/is/image/PhilipsConsumer/TAX5206_73-IMS-en_ZA?$jpglarge$&wid=1250" alt="" width="110px" class="rounded-circle">
+{% endif %}                </div>
                 <div class="card-body">
-                    <h5 style="font-size: 19px" class="text-center text-primary">Special title treatment</h5>
-                    <p style="font-size: 15px" class="text-center text-dark">HSE, Russia</p>
-                    <p class="font-italic text-dark text-center">Programme Committee co-chair</p>
-                </div>
-            </div>
-        </div>        <div class="col-sm-4 mb-5">
-            <div class="card">
-                <div class="text-center mt-3">
-                    <img src="https://socinfo2018.hse.ru/public/people/Ingmar_Weber.jpg" alt="" width="110px" class="rounded-circle">
-                </div>
-                <div class="card-body">
-                    <h5 style="font-size: 19px" class="text-center text-primary">Special title treatment</h5>
-                    <p style="font-size: 15px" class="text-center text-dark">HSE, Russia</p>
-                    <p class="font-italic text-dark text-center">Programme Committee co-chair</p>
-                </div>
-            </div>
-        </div>        <div class="col-sm-4 mb-5">
-            <div class="card">
-                <div class="text-center mt-3">
-                    <img src="https://socinfo2018.hse.ru/public/people/Ingmar_Weber.jpg" alt="" width="110px" class="rounded-circle">
-                </div>
-                <div class="card-body">
-                    <h5 style="font-size: 19px" class="text-center text-primary">Special title treatment</h5>
-                    <p style="font-size: 15px" class="text-center text-dark">HSE, Russia</p>
-                    <p class="font-italic text-dark text-center">Programme Committee co-chair</p>
-                </div>
-            </div>
-        </div>        <div class="col-sm-4 mb-5">
-            <div class="card">
-                <div class="text-center mt-3">
-                    <img src="https://socinfo2018.hse.ru/public/people/Ingmar_Weber.jpg" alt="" width="110px" class="rounded-circle">
-                </div>
-                <div class="card-body">
-                    <h5 style="font-size: 19px" class="text-center text-primary">Special title treatment</h5>
-                    <p style="font-size: 15px" class="text-center text-dark">HSE, Russia</p>
-                    <p class="font-italic text-dark text-center">Programme Committee co-chair</p>
-                </div>
-            </div>
-        </div>        <div class="col-sm-4 mb-5">
-            <div class="card">
-                <div class="text-center mt-3">
-                    <img src="https://socinfo2018.hse.ru/public/people/Ingmar_Weber.jpg" alt="" width="110px" class="rounded-circle">
-                </div>
-                <div class="card-body">
-                    <h5 style="font-size: 19px" class="text-center text-primary">Special title treatment</h5>
-                    <p style="font-size: 15px" class="text-center text-dark">HSE, Russia</p>
-                    <p class="font-italic text-dark text-center">Programme Committee co-chair</p>
-                </div>
-            </div>
-        </div>        <div class="col-sm-4 mb-5">
-            <div class="card">
-                <div class="text-center mt-3">
-                    <img src="https://socinfo2018.hse.ru/public/people/Ingmar_Weber.jpg" alt="" width="110px" class="rounded-circle">
-                </div>
-                <div class="card-body">
-                    <h5 style="font-size: 19px" class="text-center text-primary">Special title treatment</h5>
-                    <p style="font-size: 15px" class="text-center text-dark">HSE, Russia</p>
-                    <p class="font-italic text-dark text-center">Programme Committee co-chair</p>
+                    <h5 style="font-size: 19px" class="text-center text-primary">{{ speaker.name }}</h5>
+                    <p style="font-size: 15px" class="text-center text-dark">{{ speaker.employee }}</p>
+                    <p class="font-italic text-dark text-center">{{ speaker.description }}</p>
                 </div>
             </div>
         </div>
+                {% endfor %}
+
     </div>
 </div>
 {% endblock %}
